EZ-1193 material icons use a default cursor by default

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1246,6 +1246,11 @@ div.title-wrap > .title-button > i.material-icons {
 
 i.material-icons {
     vertical-align: middle;
+    cursor: default;
+}
+
+a i.material-icons {
+    cursor: inherit;
 }
 
 
