--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -620,6 +620,8 @@ nav.crumb-wrap .breadcrumb:before {
 }
 
 .editor-top .editor-tab {
+    margin: 0;
+    padding: 0 .75rem;
     border: 1px solid #ccc;
     -webkit-box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.15);
