--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1098,30 +1098,34 @@ div.title-wrap > .title-button > i.material-icons {
 }
 
 
-.loading-courses .item {
+.loading-list .item {
     height: 6rem;
-    margin: 2rem;
+    margin: 2rem 0;
 }
 
-.loading-courses .item.title {
+.loading-list .item:first-child {
+    margin-top: 0;
+}
+
+.loading-list .item.title {
     width: 20%;
     height: 3.7rem;
     margin-bottom: 2.5rem;
 }
 
-.loading-courses .item:nth-child(1) {
+.loading-list .item:nth-child(1) {
     animation-delay: 0.2s;
 }
 
-.loading-courses .item:nth-child(2) {
+.loading-list .item:nth-child(2) {
     animation-delay: 0.5s;
 }
 
-.loading-courses .item:nth-child(3) {
+.loading-list .item:nth-child(3) {
     animation-delay: 0.7s;
 }
 
-.loading-courses .item:nth-child(4) {
+.loading-list .item:nth-child(4) {
     animation-delay: 0.9s;
 }
 
