--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -675,6 +675,15 @@ nav.crumb-wrap .breadcrumb:before {
 
 /** Participants page **/
 
+#participants-container .subsection-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+#participants-container ez-pagination {
+    padding: 0 1rem;
+}
+
 #participants-container h4.subsection {
     font-size: 2rem;
     margin-top: 4rem;
@@ -702,9 +711,12 @@ nav.crumb-wrap .breadcrumb:before {
     min-height: 6rem;
 }
 
+#participants-container .card {
+    margin: .5rem 0;
+}
+
 #participants-container .card .card-content {
     padding: 5px 10px 0 10px;
-    margin-top: 20px;
 }
 
 #participants-container table th {
@@ -1395,6 +1407,7 @@ button i.material-icons {
 ez-pagination {
     display: flex;
     align-items: flex-end;
+    justify-content: flex-end;
 }
 
 ez-pageinfo {
