EZ-1283 paginate latest submissions on exercise

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -374,6 +374,10 @@ nav.crumb-wrap .breadcrumb:before {
     margin-bottom: 2rem;
 }
 
+#exercise-card #export-submissions-button {
+    margin-bottom: 1rem;
+}
+
 #exercise-card .submission-item > * {
     flex-shrink: 0;
 }
