wui fix textarea and input resizing on longer input

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -899,8 +899,8 @@ a i.pre-link-icon {
 /** Form elements **/
 
 input,
-textarea {
-    height: 4rem !important;
+textarea.materialize-textarea {
+    min-height: 4rem;
 }
 
 .input-field label {
