--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -266,21 +266,6 @@ nav.crumb-wrap .breadcrumb:before {
     opacity: inherit;
 }
 
-#exercise-card pre.feedback {
-    font-size: 1.4rem;
-    white-space: normal;
-}
-
-#exercise-card pre.auto-feedback {
-    background-color: #f5f5f5;
-    white-space: pre;
-    overflow: auto;
-}
-
-#exercise-card .grade-number {
-    font-weight: 500;
-}
-
 #exercise-card label[for=feedback],
 #exercise-card label[for=grade] {
     font-size: 1.6rem;
@@ -1112,6 +1097,24 @@ div.title-wrap > .title-button > i.material-icons {
 }
 
 
+/** Assessment view **/
+
+pre.feedback {
+    font-size: 1.4rem;
+    white-space: normal;
+}
+
+pre.auto-feedback {
+    background-color: #f5f5f5;
+    white-space: pre;
+    overflow: auto;
+}
+
+.grade-number {
+    font-weight: 500;
+}
+
+
 /** Loading placeholders **/
 
 @keyframes pulse {
@@ -1383,7 +1386,7 @@ button i.material-icons {
 /** Toast **/
 
 #toast-container {
-    max-width: 35%;
+    max-width: 100vw;
     bottom: 2rem;
     display: flex;
     flex-direction: column;
@@ -1391,9 +1394,28 @@ button i.material-icons {
     align-items: flex-end;
 }
 
+@media only screen and (max-width: 992px) and (min-width: 601px) {
+    #toast-container {
+        right: 5%;
+    }
+}
+
 @media only screen and (min-width: 993px) {
     #toast-container {
+        max-width: 50%;
         right: 3rem;
+    }
+}
+
+@media only screen and (min-width: 1201px) {
+    #toast-container {
+        max-width: 40%;
+    }
+}
+
+@media only screen and (min-width: 1601px) {
+    #toast-container {
+        max-width: 30%;
     }
 }
 
@@ -1410,6 +1432,13 @@ button i.material-icons {
 
 .toast .msg {
     white-space: pre-wrap;
+    overflow: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+    .toast .toast-action {
+        margin-left: 0;
+    }
 }
 
 
