--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1174,6 +1174,35 @@ pre.auto-feedback {
     animation-delay: 0.9s;
 }
 
+/* Legacy exercises page loading animation - remove when migrating to components */
+.loading-courses .item {
+    height: 6rem;
+    margin: 2rem;
+}
+
+.loading-courses .item.title {
+    width: 20%;
+    height: 3.7rem;
+    margin-bottom: 2.5rem;
+}
+
+.loading-courses .item:nth-child(1) {
+    animation-delay: 0.2s;
+}
+
+.loading-courses .item:nth-child(2) {
+    animation-delay: 0.5s;
+}
+
+.loading-courses .item:nth-child(3) {
+    animation-delay: 0.7s;
+}
+
+.loading-courses .item:nth-child(4) {
+    animation-delay: 0.9s;
+}
+
+
 
 .loading-exercise .item {
     height: 1.7rem;
