--- a/wui/static/css/exercise.css
+++ b/wui/static/css/exercise.css
@@ -73,13 +73,18 @@
     list-style-type: square !important;
 }
 
+#exercise-text details {
+    padding: 1rem 0;
+}
+
 #exercise-text details > summary {
     outline: none;
     cursor: pointer;
+    color: #039be5;
 }
 
 #exercise-text details > summary:hover {
-    color: #039be5;
+    text-decoration: underline;
 }
 
 #exercise-text details > .content {
