wui profile logo style fix

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -110,6 +110,7 @@ h4 {
 
 .profile-wrap .profile-logo {
     font-size: 37px;
+    margin-right: 10px;
 }
 
 @media only screen and (max-width: 992px) {
