wui optimise svgs

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background: url('../img/bg_v3.svg') no-repeat center center fixed;
+    background: url('../img/optimised/bg_v3-op.svg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
