--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -43,6 +43,10 @@ h4 {
     font-size: 2rem;
 }
 
+svg {
+    fill: currentColor;
+}
+
 
 /** Navbar **/
 
@@ -97,10 +101,11 @@ h4 {
     }
 }
 
-.logo .img {
+.logo svg {
     max-height: 58px;
     height: 30px;
     vertical-align: middle;
+    color: #fff;
 }
 
 .logo .text {
